<resources>
    <string name="app_name">WEKIT</string>
    <string name="network_error"><strong>네트워크 연결 끊김</strong>\n연결 상태 확인 후 다시 이용해 주세요🙏</string>
    <string name="kakao_app_key">4bf95a8bc8e02e07223e286cac7df2b1</string>
    <string name="sendbird_app_key">CF664CC0-BBD9-4CFA-8AA5-4690F253660B</string>
    <string name="kakao_channel_id">_Fxdhxhs</string>
    <string name="notice_cd_dropdown">dropdown icon</string>
    <string name="percentage">%</string>
    <string name="cd_ic_back">icon back</string>
    <string name="cd_character_primary">primary character image</string>
    <string name="cd_ic_setting">icon setting</string>
    <string name="cd_ic_more">icon more black</string>
    <string name="guide_update">추후 업데이트 예정입니다.</string>
    <string name="password_validation">비밀번호는 영문, 숫자, 특수문자를 포함한 10~16자로 입력해주세요.</string>
    <string name="password_check">비밀번호가 일치하지 않습니다.</string>
    <string name="dialog_wekit_check">확인</string>
    <string name="dialog_wekit_cancel">취소</string>
    <string name="denied_permission">권한을 거부하시면 서비스이용이 어렵습니다. [설정] > [앱 권한]에서 권한을 허용해주세요.</string>
    <string name="splash_cd_logo">logo image</string>
    <string name="dialog_title_server_check">🚨<b> 긴급 점검 중</b>\n빠르게 해결할테니, 조금만 기다려주세요!</string>
    <string name="dialog_title_version_update"><b>새로운 버전의 위킷</b>\n반드시 필요한 최신 버전 업데이트가 있어요.\n업데이트 후 다시 만나요 🎶</string>
    <string name="login">로그인</string>
    <string name="login_title_01">만나서 반가워요!</string>
    <string name="login_title_02">로그인</string>
    <string name="login_title_03">해 주세요</string>
    <string name="login_first_wekit">WEKIT에 처음이신가요?</string>
    <string name="login_signup"><u>회원가입</u></string>
    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_id_validation">아이디 형식이 올바르지 않습니다.</string>
    <string name="login_pw_validation">패스워드 형식이 올바르지 않습니다.</string>
    <string name="signup">회원가입</string>
    <string name="signup_email">Email</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_gender">성별</string>
    <string name="signup_man">남자</string>
    <string name="signup_woman">여자</string>
    <string name="signup_birthday">생년월일</string>
    <string name="signup_id">ID</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_complete">완료</string>
    <string name="signup_tnc">이용약관</string>
    <string name="signup_and">및</string>
    <string name="signup_personal_info">개인정보처리방침</string>
    <string name="signup_agree">에 동의합니다.</string>
    <string name="signup_email_validation">이메일 형식이 올바르지 않습니다.</string>
    <string name="signup_nickname_validation">닉네임은 10자 이내의 한글로 입력해주세요.</string>
    <string name="signup_id_validation">아이디는 대/소문자, 숫자를 포함한 6~15자로 입력해주세요.</string>
    <string name="signup_birthday_validation">생년월일 형식이 올바르지 않습니다. ex) YYYY\-mm\-dd</string>
    <string name="signup_agree_rule">이용약관 및 개인정보처리방침에 동의해주세요.</string>
    <string name="poll">설문조사</string>
    <string name="poll_height">키</string>
    <string name="poll_weight">몸무게</string>
    <string name="poll_target_weight">목표몸무게</string>
    <string name="poll_complete">확인</string>
    <string name="tutorial_step_01">나와 같은 목표를 가진\n<b>채팅방을 검색</b>해보세요</string>
    <string name="tutorial_step_02">인증한 사진을\n<b>일기로 기록</b>하세요</string>
    <string name="tutorial_step_03"><b>식단을 인증</b>하고,\n<b>일상을 공유</b>해보세요</string>
    <string name="tutorial_step_04">얼마나 꾸준히 했는지\n<b>캘린더로 확인</b>해보세요</string>
    <string name="tutorial_next">NEXT</string>
    <string name="tutorial_start">START</string>
    <string name="tutorial_cd_tutorial_img">tutorial image</string>
    <string name="onboarding_title_01">주도적인 삶을 위한\n라이프 리추얼</string>
    <string name="onboarding_subtitle_01">매일 나를 돌보고 더 나은 삶을 꾸려보세요.\n하루가 다르게 성장하는 스스로를 만나보세요.</string>
    <string name="onboarding_title_02">느슨한 연대가 주는\n응원과 동기부여</string>
    <string name="onboarding_subtitle_02">미라클 챌린지에 참여하고 멤버들과 함께 성장하세요.\n달성 상황을 공유하고 소통하는 재미를 느껴보세요.</string>
    <string name="onboarding_title_03">주어진 하루를 제대로 쓰는\n꾸준한 습관 일상</string>
    <string name="onboarding_subtitle_03">나에게 맞는 루틴을 찾아 사이 시간을 채워보세요.\n간단한 루틴으로 생산적이고, 성공적인 하루를 완성하세요.</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_start">시작하기</string>
    <string name="onboarding_cd_onboarding_img">tutorial image</string>
    <string name="miracle_subtitle">잠시만요, 두가지 질문이 있어요.</string>
    <string name="miracle_title">도전하고 싶은\n 미라클 챌린지를 알려주세요</string>
    <string name="miracle_morning">미라클 모닝에 도전할래요</string>
    <string name="miracle_night">미라클 나잇에 도전할래요</string>
    <string name="miracle_routine">다양한 루틴에 도전할래요</string>
    <string name="miracle_select">미라클 챌린지를 선택해주세요!</string>
    <string name="miracle_M">M</string>
    <string name="miracle_N">N</string>
    <string name="miracle_G">G</string>
    <string name="miracle_cd_morning_icon">morning icon</string>
    <string name="miracle_cd_night_icon">night icon</string>
    <string name="miracle_cd_routine_icon">routine icon</string>
    <string name="miracle_cd_floating_icon">floating icon</string>
    <string name="routine_title">관심 루틴을\n 1개 이상 선택해주세요.</string>
    <string name="routine_subtitle">선택하신 루틴을 기반으로\n 딱 알맞는 챌린지를 추천해드릴게요.</string>
    <string name="routine_select_interest">관심 루틴을 선택해 주세요</string>
    <string name="routine_max">루틴 선택은 5개까지 가능합니다</string>
    <string name="routine_done">완료</string>
    <string name="routine_cd_routine_icon">완료</string>
    <string name="chat_chatting">채팅</string>
    <string name="chat_send_message_hint">메시지를 입력해 주세요</string>
    <string name="chat_cd_ic_menu">menu icon</string>
    <string name="chat_cd_ic_send_message">send message icon</string>
    <string name="chat_cd_send_picture_button_img">send picture icon</string>
    <string name="chat_cd_profile_img">profile img</string>
    <string name="chat_nav_menu_button_img">navigation menu icon</string>
    <string name="chat_nav_bell_img">navigation bell icon</string>
    <string name="chat_nav_exit_img">navigation exit icon</string>
    <string name="chat_message_img">image file message</string>
    <string name="chat_dialog_send_auth">인증 사진 보내기</string>
    <string name="chat_dialog_send_normal">일반 사진 보내기</string>
    <string name="chat_dialog_expel_member_name">추방할 멤버 이름</string>
    <string name="chat_dialog_expel_reason">추방 사유</string>
    <string name="chat_dialog_expel">추방하기</string>
    <string name="chat_dialog_expel_member">멤버 추방하기</string>
    <string name="chat_dialog_report">신고하기</string>
    <string name="chat_dialog_report_room">방 신고하기</string>
    <string name="chat_dialog_report_reason">신고 사유</string>
    <string name="chat_dialog_exit_title">채팅방을 나가시겠습니까?</string>
    <string name="chat_dialog_exit_complete">나가기</string>
    <string name="chat_dialog_exit_cancel">취소</string>
    <string name="chat_challenge_start">챌린지 시작</string>
    <string name="chat_member_host_img">chat member host icon</string>
    <string name="chat_dialog_badge_img">chat dialog badge image</string>
    <string name="chat_dialog_cancel_img">chat dialog cancel image</string>
    <string name="chat_send_auth_img">chat send auth image</string>
    <string name="chat_send_normal_img">chat send normal image</string>
    <string name="channel_list">채팅방 목록</string>
    <string name="channel_search_chat_room_img">search chat room icon</string>
    <string name="channel_create_chat_room_img">create chat room icon</string>
    <string name="channel_reset">reset</string>
    <string name="channel_my_chat_room">MY 채팅방</string>
    <string name="channel_my_chat_room_img">my chat room icon</string>
    <string name="channel_lookup_chat_room">새로 올라온 채팅방</string>
    <string name="channel_myroom_no_room_img">channel no room icon</string>
    <string name="channel_no_room_main">아직 참여중인 채팅방이 없으시네요!</string>
    <string name="channel_no_room_sub">마음에 드는 채팅방에 입장하여\n같은 목표를 가진 멤버들과 함께 달려보세요.</string>
    <string name="channel_look_all_room">모든 채팅방 보기</string>
    <string name="channel_lookup_recent_chat_room">최신순으로 정렬됩니다</string>
    <string name="channel_filter_setting">필터 설정</string>
    <string name="channel_keyword_suggestion">이런 키워드는 어떠세요?</string>
    <string name="channel_filter_img">channel filter icon</string>
    <string name="channel_cancel_chat_room_img">cancel chat room icon</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="diary">Diary</string>
    <string name="home_title">WEKIT</string>
    <string name="home_greeting_nim">님,</string>
    <string name="home_greeting_miracle">미라클 챌린지</string>
    <string name="home_greeting_today_with">오늘도 함께해요!</string>
    <string name="home_certification_title">우리의 도전은 시작되었어!</string>
    <string name="home_certification_sub_title">님이 인증에 성공하신 횟수입니다.</string>
    <string name="home_check_certification">인증 횟수를 확인해보세요</string>
    <string name="home_certification_words">오늘도 100% 도전</string>
    <string name="home_certification_counts">0/0</string>
    <string name="home_certification_percentage">0%</string>
    <string name="home_miracle_guide">미라클 가이드</string>
    <string name="home_miracle_guide_explain">미라클 챌린저들의 이야기를 만나보세요.</string>
    <string name="home_cd_miracle_story_banner">미라클 챌린저들의 이야기를 만나보세요.</string>
    <string name="home_target_weight_title">목표 몸무게 : </string>
    <string name="home_target_weight_sub_title">목표몸무게에 가까워지고 있나요? </string>
    <string name="home_cd_bg_character">character background image</string>
    <string name="home_cd_text_logo">home text logo icon</string>
    <string name="permission_title">슬기로운 WEKIT 이용에 꼭 필요한 권한들을 소개할게요.</string>
    <string name="permission_camera_label">카메라</string>
    <string name="permission_camera_content">프로필,인증 사진 등을 위해 사진을\n촬영합니다.</string>
    <string name="permission_gallery_label">사진 앨범</string>
    <string name="permission_gallery_content">프로필,인증 사진 등을 위해 파일을\n촬영합니다.</string>
    <string name="permission_alarm_label">알림</string>
    <string name="permission_alarm_content">멤버들의 채팅을 실시간으로 확인\n할 수 있습니다.</string>
    <string name="permission_keep">계속하기</string>
    <string name="permission_cd_ic_camera">camera icon</string>
    <string name="permission_cd_ic_gallery">gallery icon</string>
    <string name="permission_cd_ic_alarm">alarm icon</string>
    <string name="diary_title">식단일기</string>
    <string name="diary_sunday">Sun</string>
    <string name="diary_monday">Mon</string>
    <string name="diary_tuesday">Tue</string>
    <string name="diary_wednesday">Wed</string>
    <string name="diary_thursday">Thu</string>
    <string name="diary_friday">Fri</string>
    <string name="diary_saturday">Sat</string>
    <string name="diary_warning_future_day">현재나 과거의 일기만 작성할 수 있습니다.</string>
    <string name="diary_cd_img_thumbnail">image thumbnail</string>
    <string name="diary_cd_ic_satisfaction">icon satisfaction</string>
    <string name="write_diary">Diary</string>
    <string name="write_diary_write">Diary</string>
    <string name="write_diary_edit">편집</string>
    <string name="write_diary_satisfaction">Stamp</string>
    <string name="write_diary_meal">식사</string>
    <string name="write_diary_breakfast">아침</string>
    <string name="write_diary_blunch">아점</string>
    <string name="write_diary_lunch">점심</string>
    <string name="write_diary_linner">점저</string>
    <string name="write_diary_dinner">저녁</string>
    <string name="write_diary_time">시간</string>
    <string name="write_diary_memo">Memo</string>
    <string name="write_diary_memo_hint">간단한 메모를 남겨주세요.(선택)</string>
    <string name="write_diary_not_match_date">날짜가 일치하지 않습니다.</string>
    <string name="write_diary_max_photo_count">사진은 최대 5개까지 첨부가능합니다.</string>
    <string name="write_diary_save">저장하기</string>
    <string name="write_diary_send">보내기</string>
    <string name="write_diary_cd_photo">diary photo image</string>
</resources>