<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.coconutplace.wekit.ui.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/login_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wekit_text_logo"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/home_cd_bg_character"/>

        <TextView
            android:id="@+id/login_title01_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_01"
            android:textSize="20sp"
            android:textColor="@color/login_title_text"
            android:fontFamily="@font/notosanskr_regular"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/login_logo_iv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/login_title02_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_02"
            android:textSize="22sp"
            android:textColor="@color/login_title_text"
            android:fontFamily="@font/notosanskr_bold"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_title01_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/login_title03_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_03"
            android:textSize="22sp"
            android:textColor="@color/login_title_text"
            android:fontFamily="@font/notosanskr_medium"
            app:layout_constraintTop_toBottomOf="@+id/login_title01_tv"
            app:layout_constraintStart_toEndOf="@+id/login_title02_tv"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_id_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title03_tv"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.id}"
                android:textSize="16sp"
                android:textColor="@color/login_info"
                android:fontFamily="@font/notosanskr_regular"
                android:hint="@string/login_id"
                android:textColorHint="@color/login_hint"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_pw_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_id_et_layout"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_pw_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.pw}"
                android:textSize="16sp"
                android:textColor="@color/login_info"
                android:fontFamily="@font/notosanskr_regular"
                android:hint="@string/login_password"
                android:textColorHint="@color/login_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="240dp"
            android:layout_height="52dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/notosanskr_medium"
            android:background="@drawable/bg_primary_button"
            android:elevation="20dp"
            android:onClick="@{() -> viewModel.login()}"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pw_et_layout"/>

        <TextView
            android:id="@+id/login_first_wekit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_first_wekit"
            android:textSize="12sp"
            android:textColor="@color/login_first_wekit"
            android:fontFamily="@font/notosanskr_regular"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_login_btn" />

        <TextView
            android:id="@+id/login_signup_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:textSize="12sp"
            android:textColor="@color/login_basic_text"
            android:fontFamily="@font/notosanskr_medium"
            android:layout_marginTop="2dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_first_wekit_tv" />

        <ProgressBar
            android:id="@+id/login_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminateTint="@color/network_progress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
