<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/onboarding_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/cd_ic_back"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icn_back"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboarding_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_marginTop="3dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_back_btn" />

    <TextView
        android:id="@+id/onboarding_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_regular"
        android:gravity="center"
        android:text="@string/onboarding_title_01"
        android:textColor="@color/onboarding_title"
        android:textSize="23sp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_viewpager"
        tools:text="주도적인 삶을 위한/n라이프 리추얼"/>

    <TextView
        android:id="@+id/onboarding_subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_regular"
        android:gravity="center"
        android:text="@string/onboarding_subtitle_01"
        android:textColor="@color/onboarding_subtitle"
        android:textSize="12sp"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_title_tv"
        tools:text="주도적인 삶을 위한/n라이프 리추얼"/>

    <com.rd.PageIndicatorView
        android:id="@+id/onboarding_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_subtitle_tv"
        app:piv_animationType="worm"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_padding="13dp"
        app:piv_radius="5dp"
        app:piv_selectedColor="@color/tutorial_selected_indicator"
        app:piv_unselectedColor="@color/tutorial_unselected_indicator"
        app:piv_viewPager="@id/onboarding_viewpager" />

    <TextView
        android:id="@+id/onboarding_skip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:gravity="center"
        android:text="@string/onboarding_skip"
        android:textColor="@color/onboarding_skip"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        app:layout_goneMarginBottom="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_subtitle_tv"/>

    <TextView
        android:id="@+id/onboarding_next_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:gravity="center"
        android:text="@string/onboarding_next"
        android:textColor="@color/onboarding_next"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        app:layout_goneMarginBottom="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_subtitle_tv"/>

    <Button
        android:id="@+id/onboarding_start_btn"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:text="@string/onboarding_start"
        android:textSize="16sp"
        android:textColor="@color/onboarding_start"
        android:fontFamily="@font/notosanskr_medium"
        android:background="@drawable/bg_primary_button"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_subtitle_tv"/>
</androidx.constraintlayout.widget.ConstraintLayout>
