<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.coconutplace.wekit.ui.routine.RoutineViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/routine_root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/routine_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/cd_ic_back"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/routine_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/notosanskr_bold"
                android:gravity="center"
                android:text="@string/routine_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routine_back_btn" />

            <TextView
                android:id="@+id/routine_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/notosanskr_regular"
                android:gravity="center"
                android:text="@string/routine_subtitle"
                android:textColor="@color/routine_subtitle"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routine_title_tv"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/routine_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="43dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routine_subtitle_tv"
                app:layout_constraintBottom_toTopOf="@+id/routine_done_btn"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/routine_done_btn"
                android:layout_width="240dp"
                android:layout_height="52dp"
                android:elevation="30dp"
                android:background="@drawable/bg_routine_done_inactive"
                android:text="@string/routine_done"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="78dp"
                android:textColor="@color/routine_done_text"
                android:onClick="@{() -> viewModel.submitInterest()}"
                app:layout_constraintTop_toBottomOf="@+id/routine_recyclerview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ProgressBar
                android:id="@+id/routine_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminateTint="@color/network_progress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
